Added the readRoutes function. Templatized printAdjecency (now print2DVector) in order to use it for both adjacency matrix and list of routes.

--- a/ShortestPathParallel/ShortestPathParallel.vcxproj
+++ b/ShortestPathParallel/ShortestPathParallel.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{F0B68E8E-26FA-4E96-9398-CD6CE3D9FE44}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>ShortestPathParallel</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -75,6 +75,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>$(VCInstallDir)atlmfc\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
