Restructure. The RoadMap class now is in its own .hpp file. Still not getting correct answers when testing with Dr. Foust's cases.

--- a/ShortestPathParallel/ShortestPathParallel.vcxproj
+++ b/ShortestPathParallel/ShortestPathParallel.vcxproj
@@ -149,6 +149,12 @@
   <ItemGroup>
     <ClCompile Include="shortest.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="test1.in" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="RoadMap.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
